# seminar_2_major_assignment

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml  reflection.txt  todo.txt
docs/docs/: index.md
notebooks/: simple_analysis.ipynb
seminar_2_major_assignment/: __init__.py  dataset.py  features.py  plots.py
seminar_2_major_assignment/modeling/: early_eda.ipynb  predict.py  train.py
