[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seminar_2_major_assignment"
version = "0.0.1"
description = "Seminar 2 Major Assignment"
authors = [
  { name = "Elizabeth Bader" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["seminar_2_major_assignment"]
include = ["pyproject.toml", "seminar_2_major_assignment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["seminar_2_major_assignment"]
force-sort-within-sections = true

